--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 
     <a class="i1" href="https://pt.wikipedia.org/wiki/Taco_(culin%C3%A1ria)" target="_blank">Taco Mexicano Wikipedia </a>
 
-    <div>
+  
 
-        <ul style="text-align: left;">
+       <div style="text-align: center;">
+
+      <ul style="display: inline-block;">
 
             <li>
                 Tacos de carne;
@@ -41,27 +43,27 @@
                 Tacos do chef;
         </ul>
 
-
+     </div> 
 
 
         <div>
             <hr>
             <address class="ad1">Tacos de carne</address>
             <div class="item1">
-                <img style="width:  40%;" src="taco de carne.jpg" Tacos ">
+                <img style="width:  40%;" src="img/taco de carne.jpg" Tacos ">
             </div>
             <hr>
             <address class="ad2 ">Tacos mexicanos</address>
 
             <div class="item2 ">
-                <img style="width: 40%; " src="tacos02.jpg " alt="Bastante tacos ">
+                <img style="width: 40%; " src="img/tacos02.jpg" alt="Bastante tacos ">
             </div>
             <hr>
             <address class="ad3 ">Tacos do chef</address>
 
             <div class="item3 ">
 
-                <img style="width: 40%; " src="tacos03.jpg " alt="Muitos tacos ">
+                <img style="width: 40%; " src="img/tacos03.jpg" alt="Muitos tacos ">
             </div>
             <hr color="green ">
             <style>
@@ -92,6 +94,7 @@
             </style>
         </div>
 
-</body>
+FIM!
+    </body>
 
 </html>
