--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body style="text-align: center;">
-    <div style="height: 280px; background-color:red ;">
+    <div style="height: 400px; background-color:orange ;">
         <h1 style="color: #ee9f0c; font-style: italic;">Taco</h1>
         <img style="width: 30%;" src="https://i.imgur.com/0Qu5bUy.jpg" alt="Imagem de um Taco Mexicano">
 
