--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body style="text-align: center;">
     <div style="height: 400px; background-color:orange ;">
-        <h1 style="color: #ee9f0c; font-style: italic;">Taco</h1>
+        <h1 style="color: red; font-style: italic;">Taco</h1>
         <img style="width: 30%;" src="https://i.imgur.com/0Qu5bUy.jpg" alt="Imagem de um Taco Mexicano">
 
 
